@@ -22,7 +22,6 @@ import os
 import errno
 import stat
 
-from datetime import timedelta, tzinfo
 from io import StringIO
 
 try:
@@ -30,21 +29,6 @@ try:
     HAS_LINE_PROFILER = True
 except ImportError:
     HAS_LINE_PROFILER = False
-
-ZERO = timedelta(0)
-
-
-class UTC(tzinfo):
-    """UTC"""
-
-    def utcoffset(self, dt):
-        return ZERO
-
-    def tzname(self, dt):
-        return "UTC"
-
-    def dst(self, dt):
-        return ZERO
 
 
 def split_list(items, pred):
@@ -106,12 +90,6 @@ def list_bifilter(pred, iterable):
 
 def identity(x):
     return x
-
-
-def trim_if_present(s, prefix):
-    if s.startswith(prefix):
-        return s[len(prefix):]
-    return s
 
 
 def is_file_secure(filename):
